// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<LinkButton /> should render a disabled link button 1`] = `
<Anchor
  href="#"
>
  <span
    className="button neutral disabled"
  >
    <React.Fragment>
      testing testing 123
    </React.Fragment>
  </span>
</Anchor>
`;

exports[`<LinkButton /> should render a link button with a simple text 1`] = `
<Anchor
  href="#"
>
  <span
    className="button neutral"
  >
    <React.Fragment>
      testing testing 123
    </React.Fragment>
  </span>
</Anchor>
`;

exports[`<LinkButton /> should render a link button with a size large 1`] = `
<Anchor
  href="#"
>
  <span
    className="button large neutral"
  >
    <React.Fragment>
      testing testing 123
    </React.Fragment>
  </span>
</Anchor>
`;

exports[`<LinkButton /> should render a link button with a type delete-subtle 1`] = `
<Anchor
  href="#"
>
  <span
    className="button delete-subtle"
  >
    <React.Fragment>
      testing testing 123
    </React.Fragment>
  </span>
</Anchor>
`;

exports[`<LinkButton /> should render a link button with an icon 1`] = `
<Anchor
  href="test"
>
  <span
    className="button primary"
  >
    <React.Fragment>
      <span
        className="button-icon"
      >
        <FontAwesomeIcon
          type="star"
        />
      </span>
      Link Button with Icon
    </React.Fragment>
  </span>
</Anchor>
`;

exports[`<LinkButton /> should render a link button with manual extra props for the anchor 1`] = `
<Anchor
  anchorComponentProps={
    Object {
      "someProp": false,
    }
  }
  href="test"
>
  <span
    className="button primary"
  >
    <React.Fragment>
      <span
        className="button-icon"
      >
        <FontAwesomeIcon
          type="star"
        />
      </span>
      Link Button with Icon
    </React.Fragment>
  </span>
</Anchor>
`;
